# Toy-C-Compiler-Frontend

./: BNF.md  CMakeLists.txt  README.md
inc/: utils.hh
inc/lexer/: Lexer.hh  Token.hh
inc/lexical/: Lexical.hh  Token.hh
inc/utils/: GenericPushBack.hh
src/: CMakeLists.txt  Lexer.cc  Lexical.cc  main.cc
src/CodeGen/: CodeGen.hh
src/DFAGen/: CMakeLists.txt  DFA.hh  DFAGen.cc
test/: CMakeLists.txt
test/lexer/: Lexer.cc  integer.cc  literal.cc
test/lexical/: Lexical.cc
test/utils/: GenericPushBack.cc
